First atempt to fix issue with main image not changing on dark mode in small devices.

--- a/src/assets/styles/scss/partials/02-Generic/_base.scss
+++ b/src/assets/styles/scss/partials/02-Generic/_base.scss
@@ -39,6 +39,37 @@ body {
   --link-color: var(--yellow);
   --link-color-alt: var(--skyblue);
   --footer-color: var(--grey-200);
+
+  .gradient-home {
+    background-image: url("/assets/images/mesh-gradient-black.jpg");
+    background-image: url("/assets/images/mesh-gradient-black.webp");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  img {
+    filter: grayscale(1) brightness(.8) contrast(1.2);
+  }
+
+  pre[class*="language-"] {
+    margin-top: var(--space-lg-2);
+    border: var(--border-width-thin) solid var(--white);
+    background-color: var(--body-background);
+  }
+
+  .post-card {
+    &:hover {
+      box-shadow: 0 0 1rem var(--white-400-a);
+    }
+  }
+
+  .direct-link {
+    &:hover {
+      &:after {
+        filter: brightness(500%);
+      }
+    }
+  }
 }
 
 p {
